Automation Test framework for API testing - Rest Assured